# cxy_-snake

./: CMakeLists.txt  main.cpp
core/: GameLoop.cpp  StateMachine.cpp
gameplay/: Food.cpp  Snake.cpp
include/: data.h
persistence/: SaveSystem.cpp
src/: draw.cpp  draw2.cpp  initial.cpp  input.cpp  logic.cpp  main.cpp  save.cpp
systems/: InputSystem.cpp  RenderSystem.cpp  TimeSystem.cpp
